--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -673,11 +673,11 @@ hr.solidv3 {
       align-items: center;
 
       .logo {
-        margin: 0 50px;
+        margin: 0 7vw;
       }
 
       .menu_btn {
-        margin: 0 50px;
+        margin: 0 7vw;
 
         color: white;
         text-decoration: none;
