Rights Text align

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -536,6 +536,7 @@ hr.solidv3 {
   color: white;
   font-size: 10px;
   font-family: "Monument Extended";
+  text-align: center;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
