--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -466,6 +466,7 @@ hr.solidv3 {
     color: white;
     font-size: 10px;
     font-family: "Monument Extended";
+    text-align: center;
 
     align-self: center;
   }
